@@ -1,3 +1,11 @@
+2022-10-08T16:24:07Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3211042611
+* notice: last 14d: unq all: 3 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 203 377 / 217 399
+* notice: next accum: outdated-unq outdated-all / unq all: 204 379 / 217 400
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-24] / []
+
 2022-10-08T08:23:29Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3209736842
 * notice: last 14d: unq all: 3 22
